[FIX]CSS overflow & z-index

--- a/src/base.css
+++ b/src/base.css
@@ -11,7 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background-color: rgb(10, 45, 10);
 }
 body::-webkit-scrollbar{
